Fixing issue with background on small devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ div#purnkleenFeature {
     background-color: rgba(0,0,0, 0.9);
     margin-bottom: 60px;
     background-repeat: no-repeat;
-    background-size: auto 100%;
+    background-size: 100% 100%;
     background-position: center;
     padding-bottom: 20px;
 }
